[package]
name = "teo"
version = "0.3.0-alpha.1"
edition = "2021"
rust-version = "1.82"
description = "Schema-driven web server framework."
license = "Apache-2.0"
build = "build.rs"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"

[dependencies]
teo-result = { version = "0.3.0-alpha.1", path = "../teo-result", features = ["multer"] }
teo-parser = { version = "0.3.0-alpha.1", path = "../teo-parser" }
teo-runtime = { version = "0.3.0-alpha.1", path = "../teo-runtime" }
teo-sql-connector = { version = "0.3.0-alpha.1", path = "../teo-sql-connector" }
teo-mongodb-connector = { version = "0.3.0-alpha.1", path = "../teo-mongodb-connector" }
teo-generator = { version = "0.3.0-alpha.1", path = "../teo-generator" }
hyper = { version = "1.5.0", features = ["full"]}
hyper-util = { version = "0.1.9", features = ["full"] }
http-body-util = "0.1"
multer = "3.1.0"
mime_guess = "2.0.5"
mime = "0.3.17"
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
regex = "1.11.1"
tokio = { version = "1.0", features = ["full"] }
async-recursion = "1.1.1"
async-trait = "0.1.83"
maplit = "1.0.2"
indexmap = "2.6"
itertools = "0.13.0"
array_tool = "1.0.3"
clap = { version = "4.5", features = ["derive"] }
path-absolutize = "3.1.1"
dotenvy = "0.15.7"
rand = "0.8.5"
educe = "0.6.0"
colored = "2.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4", "serde_with"] }
ring = "0.17.7"
time = "0.3.36"
key-path = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
serial_test = "3.0.0"
test-helpers-async = { version = "0.2.3" }
whoami = "1.4.1"

[build-dependencies]
rustc_version = "0.4.0"
