[package]
name = "teo-column-type"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.93"
description = "Column type definitions for Teo."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"

[features]
mongo = ["dep:serde"]
mysql = []
postgres = []
sqlite = []
default = ["mongo", "mysql", "postgres", "sqlite"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
