[package]
name = "teo-derive"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.93"
description = "High performance Rust ORM."
license = "MIT"

[lib]
name = "teo_derive"
proc-macro = true

[features]
mongo = []
mysql = []
postgres = []
sqlite = []
default = ["mongo", "mysql", "postgres", "sqlite"]

[dependencies]
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
quote = { version = "1.0.44" }
proc-macro2 = { version = "1.0.106" }
darling = { version = "0.23.0" }
