[package]
name = "teo"
version = "0.4.0-alpha.0"
edition = "2024"
rust-version = "1.88"
description = "High performance Rust ORM."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"

[features]
derive = ["dep:teo-derive"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
bigdecimal = ["dep:bigdecimal"]
rust_decimal = ["dep:rust_decimal"]
mysql = ["dep:mysql_async"]
postgres = ["dep:tokio-postgres"]
sqlite = ["dep:rusqlite"]
mongo = ["dep:mongodb"]
default = ["derive", "uuid", "chrono", "bigdecimal", "mysql", "postgres", "sqlite", "mongo"]

[dependencies]
teo-derive = { path = "../teo-derive", version = "0.4.0-alpha.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4.38", features = ["serde"], optional = true }
bigdecimal = { version = "0.4.8", optional = true }
rust_decimal = { version = "1.37.2", optional = true }
tokio-postgres = { version = "0.7.13", features = ["runtime", "with-uuid-1", "with-chrono-0_4"], optional = true }
mysql_async = { version = "0.36.1", optional = true }
rusqlite = { version = "0.37.0", optional = true }
mongodb = { version = "3.2.4", optional = true }
async-trait = { version = "0.1.88" }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
