[package]
name = "teo-example-mysql"
version = "0.4.0-alpha.0"
edition = "2024"
rust-version = "1.88"
description = "TEO MongoDB example."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"

[dependencies]
teo = { path = "../../teo", features = ["derive", "mysql"] }
tokio = { version = "1.46.1", features = ["full"] }
