[package]
name = "teo-example-sqlite"
version = "0.4.0-alpha.0"
edition = "2024"
rust-version = "1.88"
description = "TEO MongoDB example."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"

[dependencies]
teo = { path = "../../teo", features = ["derive", "sqlite"] }
tokio = { version = "1.46.1", features = ["full"] }
