[package]
name = "teo-example-mongodb-axum"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.93"
description = "Teo MongoDB Axum example."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"
publish = false

[dependencies]
teo = { path = "../../../teo", features = ["derive", "mongodb"] }
tokio = { version = "1.46.1", features = ["full"] }
