[package]
name = "teo-example-mysql-axum"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.93"
description = "Teo MySQL Axum example."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"
publish = false

[dependencies]
teo = { path = "../../../teo", features = ["derive", "mysql_sync"] }
tokio = { version = "1.46.1", features = ["full"] }
