[package]
name = "teo-example-postgres-axum"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.93"
description = "Example for Teo integrated with postgres and axum."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"
publish = false

[dependencies]
teo = { path = "../../../teo", features = ["derive", "postgres_sync"] }
tokio = { version = "1.46.1", features = ["full"] }
