[package]
name = "teo-example-tokio-postgres-axum"
version = "0.4.0-alpha.1"
edition = "2024"
rust-version = "1.93"
description = "Example for Teo integrated with tokio-postgres and axum."
license = "MIT"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo"
publish = false

[dependencies]
teo = { path = "../../../teo", features = ["derive", "tokio-postgres"] }
tokio = { version = "1.46.1", features = ["full"] }
